package de.adesso.adessoseminarmanagement.domain.model;public class Person {
}
